🐞 fix(style): numeric invisible

--- a/src/style/border.less
+++ b/src/style/border.less
@@ -9,7 +9,6 @@
 	left: 0;
 	width: 100%;
 	height: 1rpx;
-	transform: scaleY(0.5);
 
 }
 
@@ -17,7 +16,6 @@
 	top: 0;
 	width: 1rpx;
 	height: 100%;
-	transform: scaleX(0.5);
 
 }
 
